Setup pocket world - Separate pocket world from party world to allow events to still occur - Add `/pocket` command to tp to the pocket world - Add `pocketSpawn` field to mainConfig, set with `/setspawn` - Move Worlds to an enum - Change `/partyreset` command to `/resetpocket` (not `/pocketreset` to prevent accidental tab completion with `/pocket`) - Add PocketMechanic to handle mechanics in the pocket world 	- Prevent beds from setting spawnpoint 	- Prevent Nether portals from being created 	- Prevent End portal frames from being activated